added css img dimensions

--- a/textdocs/requirements.txt
+++ b/textdocs/requirements.txt
@@ -68,7 +68,7 @@ A background-color for each page.
 If you wish, you may incorporate multiple background-colors on a single page.
 A font, font-size, font-style, font-weight, color, and text-decoration for at least 1 (though not necessarily the same) text element per page.
 A :hover effect for each link.
-Appropriate element spacing using margin and/or padding (this is understandbly subjective).
+Appropriate element spacing using margin and/or padding (this is understandably subjective).
 A border around at least 1 image per page.
 At least 1 of your borders must incorporate rounded corners.
 All img dimensions must be defined in the externally linked CSS page, and not as a tag attribute.
